LIMA-110 : max-width 100% for image in left part of login modal to avoid overflowing on right part

--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -17207,6 +17207,9 @@ main .matches-widgets td.content span.empty {
   margin-left: -20px;
   margin-bottom: -20px;
 }
+.login-modal .login-image img {
+  max-width: 100%;
+}
 .login-modal form:before,
 .login-modal form:after {
   content: " ";
