--- a/src/css/less/livescore/rules/login/ls-login-modal.less
+++ b/src/css/less/livescore/rules/login/ls-login-modal.less
@@ -4,7 +4,11 @@
 
   .login-image{
   	margin-left: -20px;  
-  	margin-bottom: -20px
+  	margin-bottom: -20px;
+    
+    img {
+      max-width: 100%;
+    }
   }
   
   form {
